Rename dh_is_ready -> dh_is_ready.sh
Original idea of no extension was that dh_is_ready could be written in
python, or bash, or whathaveya. But we have agreed to stick to bash and
call another python script from there if needed.

[DHDO-765]

--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -91,7 +91,7 @@ services:
       # icat's hooks for development
       - ./irods/icat/hooks/:/opt/irods/hooks/
       # icat's development definition of being ready
-      - ./irods/icat/dh_is_ready:/dh_is_ready
+      - ./irods/icat/dh_is_ready.sh:/dh_is_ready.sh
       # mock surfsara operations (?)
       - ./irods/icat/DMFS:/opt/irods/DMFS
       # mock users
