*PoC*: ./rit.sh backend ; ./rit.sh test irods
Modifications to the docker-compose profiles are completely not thought
out! Just trying things out here.

rit.sh code is just a prototype! Needs refactoring :)

We hope that at some point all of our services will be robust enough to
be upped at the same time. They will wait for their dependencies on
their own.

We thought we could then come up with (let's say) "logical" sets of
services. For example, the "test-ruleset" set, which could be: {icat,
ires-hnas-um, ires-hnas-azm, ires-ceph-ac, ires-ceph-gl, epicpid,
sram-sync, ldap, ...} -- all the services that need to be _ready_
(`/dh_is_ready.sh`) for us to run `./rit.sh test irods` (run
irods-ruleset's test suite).

Another example could be logical set "demo-mdr", which could contain all
the containers (services) that need to be "ready" to use mdr. Meaning,
logging in (requiring epicpid), performing ingests (requiring perhaps
irods-hnas-um), .. etc.

It would be nice if this information (which services belong to which
logical set) lived in the docker-compose(s). And from rit.sh we would
just work with that somehow. Perhaps there is a way to make this work
with docker compose profiles? Perhaps we can use docker compose labels
somehow?

So then we could do something like: `./rit.sh up set:test-ruleset &&
./rit.sh test irods-ruleset`. And `./rit.sh` would query the
docker-compose for the services associated to "test-ruleset" and query
those services until they are ready (`/dh_is_ready.sh`).

Just a thought / idea for the near future.

After we've figured this out maybe we can do a proper refactor of
rit.sh! Which I've just contributed to with a lot of barely-a-prototype
code.

[DHDO-765]

--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -160,7 +160,7 @@ services:
       # Pricing AVU for 'coordinating' resource
       ENV_IRODS_COOR_RESC_PRICING: "0.130"
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
-    profiles: ["backend","full"]
+    profiles: ["backend-after-icat","full"]
     volumes:
       # SSL files
       - ./irods/ires-hnas/test-dev-ssl-certs/:/opt/irods_ssl_staging:ro
@@ -242,7 +242,7 @@ services:
       # TODO: This right?
       ENV_IRODS_COOR_RESC_PRICING: "0"
       VIRTUAL_HOST: ires-hnas-azm.${RIT_ENV}.rit.unimaas.nl
-    profiles: ["backend","full"]
+    profiles: ["backend-after-icat","full"]
     volumes:
       # SSL files
       - ./irods/ires-hnas/test-dev-ssl-certs/:/opt/irods_ssl_staging:ro
@@ -335,7 +335,7 @@ services:
       # This is persistent because the delay queue depends on files in this directory
       - delay-queue:/var/lib/irods/config/packedRei
       - /etc/localtime:/etc/localtime:ro
-    profiles: ["backend","full"]
+    profiles: ["backend-after-icat","full"]
     networks:
       default:
         aliases:
@@ -419,7 +419,7 @@ services:
       # This is persistent because the delay queue depends on files in this directory
       - delay-queue:/var/lib/irods/config/packedRei
       - /etc/localtime:/etc/localtime:ro
-    profiles: ["backend","full"]
+    profiles: ["backend-after-icat","full"]
     networks:
       default:
         aliases:
@@ -436,7 +436,6 @@ services:
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
-    profiles: ["backend","full"]
     networks:
       default:
         aliases:
@@ -453,7 +452,6 @@ services:
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY2}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && /usr/bin/minio server /data'
-    profiles: ["backend","full"]
     networks:
       default:
         aliases:
