--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -306,6 +306,35 @@ services:
       common_default:
         aliases:
           - mdr-db.dh.local
+  help-center-backend:
+    build:
+      context: externals/dh-help-center
+      dockerfile: Dockerfile
+    image: ${ENV_REGISTRY_HOST}/docker-dev/help-center-backend:${ENV_TAG}
+    environment:
+      VIRTUAL_HOST: helpbackend.${RIT_ENV}.dh.unimaas.nl
+    networks:
+      default:
+        aliases:
+          - help-center-backend.dh.local
+      common_default:
+        aliases:
+          - help-center-backend.dh.local
+  help-center:
+    build:
+      context: externals/dh-help-center/frontend
+      dockerfile: Dockerfile
+    image: ${ENV_REGISTRY_HOST}/docker-dev/help-center:${ENV_TAG}
+    environment:
+      VIRTUAL_HOST: helpcenter.${RIT_ENV}.dh.unimaas.nl
+    networks:
+      default:
+        aliases:
+          - help-center.dh.local
+      common_default:
+        aliases:
+          - help-center.dh.local
+
 
 networks:
   common_default:
