--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -308,11 +308,13 @@ services:
           - mdr-db.dh.local
   help-center-backend:
     build:
-      context: externals/dh-help-center
+      context: externals/dh-help-center/backend
       dockerfile: Dockerfile
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center-backend:${ENV_TAG}
     environment:
       VIRTUAL_HOST: helpbackend.${RIT_ENV}.dh.unimaas.nl
+      CONFLUENCE_CLOUD_URL: https://mumc.atlassian.net
+      CONFLUENCE_CLOUD_SPACE_KEY: MDRD
     networks:
       default:
         aliases:
