--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -310,6 +310,8 @@ services:
     build:
       context: externals/dh-help-center/backend
       dockerfile: Dockerfile
+      args:
+        - ENV_FILEBEAT_VERSION
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center-backend:${ENV_TAG}
     environment:
       VIRTUAL_HOST: helpbackend.${RIT_ENV}.dh.unimaas.nl
@@ -317,6 +319,7 @@ services:
       CONFLUENCE_CLOUD_SPACE_KEY: MDRD
       LOGSTASH_TAGS: HELP_CENTER_BACKEND
       WATCHFILES_FORCE_POLLING: true
+      AUTO_RELOAD: true
     volumes:
       - ./externals/dh-help-center/backend/main.py:/opt/main.py
     networks:
