Make epicpid create credentials from env variables [DHDO-796]

--- a/.env
+++ b/.env
@@ -80,6 +80,6 @@ ENV_EPICPID_USER=user
 ENV_EPICPID_PASSWORD=foobar
 
 # MDR
-ENV_MDR_HANDLE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl
+ENV_MDR_HANDLE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
 
 ENV_DEBUG_DH_BOOTSTRAP="no"
