--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -50,6 +50,10 @@ services:
       - net.ipv4.tcp_keepalive_intvl=75
       - net.ipv4.tcp_keepalive_probes=9
       - net.ipv4.tcp_keepalive_time=600
+    ulimits:
+      nofile:
+        soft: 1048576
+        hard: 1048576
     depends_on:
        - irods-db
     hostname: icat.dh.local
@@ -132,6 +136,10 @@ services:
       - net.ipv4.tcp_keepalive_intvl=75
       - net.ipv4.tcp_keepalive_probes=9
       - net.ipv4.tcp_keepalive_time=600
+    ulimits:
+      nofile:
+        soft: 1048576
+        hard: 1048576
     hostname: ires-hnas-um.dh.local
     env_file:
       - .env
@@ -214,6 +222,10 @@ services:
       - net.ipv4.tcp_keepalive_intvl=75
       - net.ipv4.tcp_keepalive_probes=9
       - net.ipv4.tcp_keepalive_time=600
+    ulimits:
+      nofile:
+        soft: 1048576
+        hard: 1048576
     hostname: ires-hnas-azm.dh.local
     env_file:
       - .env
