Volume map complete folder for help-center-backend [DHS-2877]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -321,7 +321,7 @@ services:
       WATCHFILES_FORCE_POLLING: true
       AUTO_RELOAD: true
     volumes:
-      - ./externals/dh-help-center/backend/main.py:/opt/main.py
+      - ./externals/dh-help-center/backend/:/opt/
     networks:
       default:
         aliases:
