--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -312,6 +312,8 @@ services:
       dockerfile: Dockerfile
       args:
         - ENV_FILEBEAT_VERSION
+    env_file:
+      - irods.secrets.cfg
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center-backend:${ENV_TAG}
     environment:
       VIRTUAL_HOST: helpbackend.${RIT_ENV}.dh.unimaas.nl
@@ -320,8 +322,9 @@ services:
       LOGSTASH_TAGS: HELP_CENTER_BACKEND
       WATCHFILES_FORCE_POLLING: true
       AUTO_RELOAD: true
+      JIRA_URL: https://mumc-sandbox.atlassian.net
     volumes:
-      - ./externals/dh-help-center/backend/main.py:/opt/main.py
+      - ./externals/dh-help-center/backend/app:/opt/app
     networks:
       default:
         aliases:
