Update IRODS_PASS to use env variables

--- a/mdr.env
+++ b/mdr.env
@@ -18,7 +18,7 @@ SAML_DJANGO_MAIL_ATTR=mail
 # iRODS
 IRODS_HOST=icat.dh.local
 IRODS_USER=rods
-IRODS_PASS=irods
+IRODS_PASS=${ENV_IRODS_PASSWORD_ADMIN}
 IRODS_CLIENT_SERVER_POLICY=CS_NEG_REQUIRE
 TERMS_OF_SERVICE_TIMESTAMP=1618476699 #  date '+%s' on   Thu Apr 15 2021 08:51:39 GMT+0000
 
