--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -333,6 +333,8 @@ services:
     build:
       context: externals/dh-help-center/frontend
       dockerfile: Dockerfile
+      args:
+        - REACT_APP_MDR_URL=http://mdr.local.dh.unimaas.nl
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center:${ENV_TAG}
     environment:
       VIRTUAL_HOST: helpcenter.${RIT_ENV}.dh.unimaas.nl
