Use variable for ELASTIC_PASSWORD

--- a/mdr.env
+++ b/mdr.env
@@ -23,7 +23,7 @@ IRODS_CLIENT_SERVER_POLICY=CS_NEG_REQUIRE
 TERMS_OF_SERVICE_TIMESTAMP=1618476699 #  date '+%s' on   Thu Apr 15 2021 08:51:39 GMT+0000
 
 # Elastic
-ELASTIC_PASSWORD=foobar
+ELASTIC_PASSWORD=${ENV_ELASTIC_PASSWORD}
 ELASTIC_HOST=elastic.dh.local
 ELASTIC_PORT=9200
 
