--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -343,6 +343,7 @@ services:
       dockerfile: Dockerfile
       args:
         - REACT_APP_MDR_URL=http://mdr.local.dh.unimaas.nl
+        - REACT_APP_SERVICE_DESK_URL=https://mumc-sandbox.atlassian.net/
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center:${ENV_TAG}
     environment:
       VIRTUAL_HOST: helpcenter.${RIT_ENV}.dh.unimaas.nl
