--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -43,6 +43,13 @@ services:
         - ENV_DOCKERIZE_VERSION
         - ENV_IRODS_GID
         - ENV_IRODS_UID
+        # S3 variables to create secret files
+        - ENV_S3_ACCESS_KEY_AC
+        - ENV_S3_SECRET_KEY_AC
+        - ENV_S3_AUTH_FILE_AC
+        - ENV_S3_ACCESS_KEY_GL
+        - ENV_S3_SECRET_KEY_GL
+        - ENV_S3_AUTH_FILE_GL
     image: ${ENV_REGISTRY_HOST}/docker-dev/irods-base:${ENV_TAG}
     # Add TCP KEEPALIVE settings to keep long-lived idle iRODS connection alive across firewalls
     # https://github.com/irods/irods/issues/5218
@@ -78,14 +85,6 @@ services:
       ENV_IRODS_SSL_DH_PARAMS: dhparams.pem
       # defaults to '/etc/ssl/certs/ca-certificates.crt' (in the container)
       ENV_IRODS_SSL_CA_CERTIFICATE: test_only_dev_irods_dh_ca_cert.pem
-      S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_ACCESS_KEY1: ${ENV_S3_ACCESS_KEY1}
-      ENV_S3_SECRET_KEY1: ${ENV_S3_SECRET_KEY1}
-      ENV_S3_AUTH_FILE1: ${ENV_S3_AUTH_FILE1}
-      ENV_S3_ACCESS_KEY2: ${ENV_S3_ACCESS_KEY2}
-      ENV_S3_SECRET_KEY2: ${ENV_S3_SECRET_KEY2}
-      ENV_S3_AUTH_FILE2: ${ENV_S3_AUTH_FILE2}
       ENV_FILEBEAT_PRIMARY_TAG: ICAT
       # TODO: Do we want to change this to icat?
       VIRTUAL_HOST: irods.${RIT_ENV}.rit.unimaas.nl
@@ -136,6 +135,13 @@ services:
         - ENV_DOCKERIZE_VERSION
         - ENV_IRODS_GID
         - ENV_IRODS_UID
+        # S3 variables to create secret files
+        - ENV_S3_ACCESS_KEY_AC
+        - ENV_S3_SECRET_KEY_AC
+        - ENV_S3_AUTH_FILE_AC
+        - ENV_S3_ACCESS_KEY_GL
+        - ENV_S3_SECRET_KEY_GL
+        - ENV_S3_AUTH_FILE_GL
     image: ${ENV_REGISTRY_HOST}/docker-dev/irods-base:${ENV_TAG}
     # Add TCP KEEPALIVE settings to keep long-lived idle iRODS connection alive across firewalls
     # https://github.com/irods/irods/issues/5218
@@ -168,14 +174,6 @@ services:
       ENV_IRODS_COOR_RESC_COMMENT: "Replicated-resource-for-UM"
       # Pricing AVU for 'coordinating' resource
       ENV_IRODS_COOR_RESC_PRICING: "0.130"
-      S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_ACCESS_KEY1: ${ENV_S3_ACCESS_KEY1}
-      ENV_S3_SECRET_KEY1: ${ENV_S3_SECRET_KEY1}
-      ENV_S3_AUTH_FILE1: ${ENV_S3_AUTH_FILE1}
-      ENV_S3_ACCESS_KEY2: ${ENV_S3_ACCESS_KEY2}
-      ENV_S3_SECRET_KEY2: ${ENV_S3_SECRET_KEY2}
-      ENV_S3_AUTH_FILE2: ${ENV_S3_AUTH_FILE2}
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
     profiles: ["backend-after-icat","full"]
     volumes:
@@ -226,6 +224,13 @@ services:
         - ENV_DOCKERIZE_VERSION
         - ENV_IRODS_GID
         - ENV_IRODS_UID
+        # S3 variables to create secret files
+        - ENV_S3_ACCESS_KEY_AC
+        - ENV_S3_SECRET_KEY_AC
+        - ENV_S3_AUTH_FILE_AC
+        - ENV_S3_ACCESS_KEY_GL
+        - ENV_S3_SECRET_KEY_GL
+        - ENV_S3_AUTH_FILE_GL
     image: ${ENV_REGISTRY_HOST}/docker-dev/irods-base:${ENV_TAG}
     # Add TCP KEEPALIVE settings to keep long-lived idle iRODS connection alive across firewalls
     # https://github.com/irods/irods/issues/5218
@@ -259,14 +264,6 @@ services:
       # Pricing AVU for 'coordinating' resource
       # TODO: This right?
       ENV_IRODS_COOR_RESC_PRICING: "0"
-      S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_ACCESS_KEY1: ${ENV_S3_ACCESS_KEY1}
-      ENV_S3_SECRET_KEY1: ${ENV_S3_SECRET_KEY1}
-      ENV_S3_AUTH_FILE1: ${ENV_S3_AUTH_FILE1}
-      ENV_S3_ACCESS_KEY2: ${ENV_S3_ACCESS_KEY2}
-      ENV_S3_SECRET_KEY2: ${ENV_S3_SECRET_KEY2}
-      ENV_S3_AUTH_FILE2: ${ENV_S3_AUTH_FILE2}
       VIRTUAL_HOST: ires-hnas-azm.${RIT_ENV}.rit.unimaas.nl
     profiles: ["backend-after-icat","full"]
     volumes:
@@ -315,6 +312,13 @@ services:
         - ENV_DOCKERIZE_VERSION
         - ENV_IRODS_GID
         - ENV_IRODS_UID
+        # S3 variables to create secret files
+        - ENV_S3_ACCESS_KEY_AC
+        - ENV_S3_SECRET_KEY_AC
+        - ENV_S3_AUTH_FILE_AC
+        - ENV_S3_ACCESS_KEY_GL
+        - ENV_S3_SECRET_KEY_GL
+        - ENV_S3_AUTH_FILE_GL
     image: ${ENV_REGISTRY_HOST}/docker-dev/irods-base:${ENV_TAG}
     # Add TCP KEEPALIVE settings to keep long-lived idle iRODS connection alive across firewalls
     # https://github.com/irods/irods/issues/5218
@@ -334,18 +338,7 @@ services:
       # defaults to '/etc/ssl/certs/ca-certificates.crt' (in the container)
       ENV_IRODS_SSL_CA_CERTIFICATE: test_only_dev_irods_dh_ca_cert.pem
       # Yet another work around :( READ corresponding entry comment in ires-ceph-gl
-      S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
-      ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
-      ###########################################
-      ENV_S3_ACCESS_KEY1: ${ENV_S3_ACCESS_KEY1}
-      ENV_S3_SECRET_KEY1: ${ENV_S3_SECRET_KEY1}
-      ENV_S3_AUTH_FILE1: ${ENV_S3_AUTH_FILE1}
-      ENV_S3_ACCESS_KEY2: ${ENV_S3_ACCESS_KEY2}
-      ENV_S3_SECRET_KEY2: ${ENV_S3_SECRET_KEY2}
-      ENV_S3_AUTH_FILE2: ${ENV_S3_AUTH_FILE2}
-      ###########################################
+      S3_AUTH_FILE: ${ENV_S3_AUTH_FILE_AC}
       ENV_S3_RESC_NAME: "UM-Ceph-S3-AC"
       ENV_S3_HOST: "minio1.dh.local:9000"
       ENV_FILEBEAT_PRIMARY_TAG: IRES
@@ -394,6 +387,13 @@ services:
         - ENV_DOCKERIZE_VERSION
         - ENV_IRODS_GID
         - ENV_IRODS_UID
+        # S3 variables to create secret files
+        - ENV_S3_ACCESS_KEY_AC
+        - ENV_S3_SECRET_KEY_AC
+        - ENV_S3_AUTH_FILE_AC
+        - ENV_S3_ACCESS_KEY_GL
+        - ENV_S3_SECRET_KEY_GL
+        - ENV_S3_AUTH_FILE_GL
     image: ${ENV_REGISTRY_HOST}/docker-dev/irods-base:${ENV_TAG}
     # Add TCP KEEPALIVE settings to keep long-lived idle iRODS connection alive across firewalls
     # https://github.com/irods/irods/issues/5218
@@ -427,19 +427,7 @@ services:
       # Or... and what about what Terrell says at the end?
       # https://github.com/irods/irods_resource_plugin_s3/issues/1837#issuecomment-965919232
       # Do we have to create that file everywhere? What?
-      # TODO
-      S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_AUTH_FILE: /var/lib/irods/minio.keypair
-      ENV_S3_ACCESS_KEY: ${ENV_S3_ACCESS_KEY2}
-      ENV_S3_SECRET_KEY: ${ENV_S3_SECRET_KEY2}
-      ###########################################
-      ENV_S3_ACCESS_KEY1: ${ENV_S3_ACCESS_KEY1}
-      ENV_S3_SECRET_KEY1: ${ENV_S3_SECRET_KEY1}
-      ENV_S3_AUTH_FILE1: ${ENV_S3_AUTH_FILE1}
-      ENV_S3_ACCESS_KEY2: ${ENV_S3_ACCESS_KEY2}
-      ENV_S3_SECRET_KEY2: ${ENV_S3_SECRET_KEY2}
-      ENV_S3_AUTH_FILE2: ${ENV_S3_AUTH_FILE2}
-      ###########################################
+      S3_AUTH_FILE: ${ENV_S3_AUTH_FILE_GL}
       ENV_S3_RESC_NAME: "UM-Ceph-S3-GL"
       ENV_S3_HOST: "minio2.dh.local:9000"
       ENV_FILEBEAT_PRIMARY_TAG: IRES
@@ -478,8 +466,8 @@ services:
     image: minio/minio:RELEASE.2023-01-12T02-06-16Z
     environment:
       VIRTUAL_HOST: minio1.${RIT_ENV}.rit.unimaas.nl
-      MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY1}
-      MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY1}
+      MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY_AC}
+      MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY_AC}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && minio server /data'
     networks:
@@ -494,8 +482,8 @@ services:
     image: minio/minio:RELEASE.2023-01-12T02-06-16Z
     environment:
       VIRTUAL_HOST: minio2.${RIT_ENV}.rit.unimaas.nl
-      MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY2}
-      MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY2}
+      MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY_GL}
+      MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY_GL}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && minio server /data'
     networks:
