--- a/.env
+++ b/.env
@@ -28,8 +28,8 @@ ENV_ELASTIC_PORT=9200
 # For containers that use docker images
 ENV_MYSQL_VERSION=5.6
 ## Note: postgres version is also used by irods (icat) container
-ENV_POSTGRES_VERSION=11.16
-ENV_POSTGRES_CLIENT_VERSION=11
+ENV_POSTGRES_VERSION=14.7-alpine
+ENV_POSTGRES_CLIENT_VERSION=14
 
 # Other (used in various containers)
 ENV_DOCKERIZE_VERSION=v0.2.0
@@ -59,10 +59,6 @@ ENV_IRODS_KEY_SERVER_ZONE=test_12345pqmzwoxneicyrhfAAA3232
 ENV_IRODS_KEY_SERVER_NEGOTIATION=test_567890nceibxwuvzyqfsagjf8dk
 ENV_IRODS_KEY_CONTROL_PLANE=test_ABCDErulswop1q2b3v4m5z6as98
 ENV_IRODS_PASSWORDS_SALT=test_somesalthere
-
-# PGSQL
-ENV_POSTGRES_VERSION=11.16
-ENV_POSTGRES_CLIENT_VERSION=11
 
 # Other (used in various containers)
 ENV_DOCKERIZE_VERSION=v0.2.0
