--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -352,15 +352,14 @@ services:
     build:
       context: externals/dh-help-center/frontend
       dockerfile: Dockerfile
-      args:
-        - REACT_APP_MDR_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl
-        - REACT_APP_SERVICE_DESK_URL=https://mumc-sandbox.atlassian.net/
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center:${ENV_TAG}
     environment:
       VIRTUAL_HOST: helpcenter.${RIT_ENV}.dh.unimaas.nl
       VIRTUAL_PORT: 3000
       LOGSTASH_TAGS: HELP_CENTER_FRONTEND
       HOST: 0.0.0.0
+      REACT_APP_MDR_URL : http://mdr.${RIT_ENV}.dh.unimaas.nl
+      REACT_APP_SERVICE_DESK_URL : https://mumc-sandbox.atlassian.net/
     volumes:
       - './externals/dh-help-center/frontend/src:/app/src'
       - './externals/dh-help-center/frontend/public:/app/public'
