Add env HELP_CENTER_BACKEND_HOST [DHS-2883]

--- a/mdr.env
+++ b/mdr.env
@@ -71,3 +71,6 @@ MDR_POSTGRES_PASSWORD=foobar
 # Drag and Drop
 DRAG_AND_DROP_MAX_FILES=100
 DRAG_AND_DROP_MAX_SIZE=50
+
+# Help-center backend
+HELP_CENTER_BACKEND_HOST=help-center-backend.dh.local
