Update registry URL

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 ### See https://docs.docker.com/compose/env-file/                        ###
 ############################################################################
 # Docker registry
-ENV_REGISTRY_HOST=registry.dh.unimaas.nl
+ENV_REGISTRY_HOST=registry.prod.dh.unimaas.nl
 ENV_TAG=latest
 
 # Used by all iRODS's bootstrap.sh
