Add new JIRA request type "Automated process support" [DHS-3066, DHS-3053]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -337,6 +337,7 @@ services:
       JIRA_SERVICE_DESK_FEATURE_REQUEST_NAME: "Feature request"
       JIRA_SERVICE_DESK_SUPPORT_REQUEST_NAME: "Support request"
       JIRA_SERVICE_DESK_EXTERNAL_ACCESS_REQUEST_NAME: "External Access Request"
+      JIRA_SERVICE_DESK_AUTOMATED_PROCESS_SUPPORT_REQUEST_NAME: "Automated process support request"
     volumes:
       - ./externals/dh-help-center/backend/:/opt/
     networks:
