--- a/.env
+++ b/.env
@@ -76,6 +76,9 @@ ENV_EPICPID_URL=http://epicpid.dh.local/epic/21.T12996/
 ENV_EPICPID_USER=user
 ENV_EPICPID_PASSWORD=test_lhkjdhfgqpow96312
 
+# Help center backend
+ENV_HC_BACKEND_URL: help-center-backend.dh.local:8000
+
 # MDR
 ENV_MDR_HANDLE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
 
