--- a/mdr.env
+++ b/mdr.env
@@ -1,7 +1,7 @@
 ENV=${RIT_ENV}
 
 # Proxy
-VIRTUAL_HOST=mdr.${RIT_ENV}.dh.unimaas.nl
+VIRTUAL_HOST=mdrinternal.${RIT_ENV}.dh.unimaas.nl
 VIRTUAL_PORT=8000
 
 # SAML
