Add MDR and DH-HOME urls as environment variables for mdr-home  [DHS-2969]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -399,7 +399,7 @@ services:
       VIRTUAL_PORT: 3000
       HOST: 0.0.0.0
       REACT_APP_MDR_URL : http://mdr.${RIT_ENV}.dh.unimaas.nl
-      REACT_APP_DATAHUB_HOME_URL : http://datahubhome.${RIT_ENV}.dh.unimaas.nl
+      REACT_APP_DATAHUB_HOME_URL : http://datahubhomepage.${RIT_ENV}.dh.unimaas.nl
     volumes:
       - './externals/dh-mdr-home/src:/app/src'
       - './externals/dh-mdr-home/public:/app/public'
