--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -143,9 +143,6 @@ services:
         - ENV_S3_SECRET_KEY_GL
         - ENV_S3_AUTH_FILE_GL
     image: ${ENV_REGISTRY_HOST}/docker-dev/irods-base:${ENV_TAG}
-    depends_on:
-      - minio1
-      - minio2
     # Add TCP KEEPALIVE settings to keep long-lived idle iRODS connection alive across firewalls
     # https://github.com/irods/irods/issues/5218
     sysctls:
@@ -177,11 +174,6 @@ services:
       ENV_IRODS_COOR_RESC_COMMENT: "Replicated-resource-for-UM"
       # Pricing AVU for 'coordinating' resource
       ENV_IRODS_COOR_RESC_PRICING: "0.130"
-      # S3 project creation
-      ENV_S3_RESC_NAME_AC: "UM-Ceph-S3-AC"
-      ENV_S3_HOST_AC: "minio1.dh.local:9000"
-      ENV_S3_RESC_NAME_GL: "UM-Ceph-S3-GL"
-      ENV_S3_HOST_GL: "minio2.dh.local:9000"
       VIRTUAL_HOST: ires.${RIT_ENV}.rit.unimaas.nl
     profiles: ["backend-after-icat","full"]
     volumes:
@@ -301,6 +293,82 @@ services:
       common_default:
         aliases:
           - ires-hnas-azm.dh.local
+
+  ires-s3:
+    build:
+      context: externals/dh-irods/irods-base/
+      dockerfile: Dockerfile
+      args:
+        - ENV_IRODS_VERSION
+        - ENV_IRODS_PYTHON_PLUGIN_VERSION
+        - ENV_IRODS_EXT_CLANG_VERSION
+        - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
+        - ENV_FILEBEAT_VERSION
+        - ENV_IRODS_RESC_PLUGIN_S3_VERSION
+        - ENV_DOCKERIZE_VERSION
+        - ENV_IRODS_GID
+        - ENV_IRODS_UID
+        # S3 variables to create secret files
+        - ENV_S3_ACCESS_KEY_AC
+        - ENV_S3_SECRET_KEY_AC
+        - ENV_S3_AUTH_FILE_AC
+        - ENV_S3_ACCESS_KEY_GL
+        - ENV_S3_SECRET_KEY_GL
+        - ENV_S3_AUTH_FILE_GL
+    image: ${ENV_REGISTRY_HOST}/docker-dev/irods-base:${ENV_TAG}
+    # Add TCP KEEPALIVE settings to keep long-lived idle iRODS connection alive across firewalls
+    # https://github.com/irods/irods/issues/5218
+    sysctls:
+      - net.ipv4.tcp_keepalive_intvl=75
+      - net.ipv4.tcp_keepalive_probes=9
+      - net.ipv4.tcp_keepalive_time=600
+    hostname: ires-s3.dh.local
+    env_file: .env
+    depends_on:
+      - minio1
+      - minio2
+    environment:
+      # Name of SSL-related files expected in /opt/irods_ssl_staging/ (volume mapped)
+      ENV_IRODS_SSL_CERT: ires-s3.dh.local.crt
+      ENV_IRODS_SSL_KEY: ires-s3.dh.local.key
+      ENV_IRODS_SSL_DH_PARAMS: dhparams.pem
+      # defaults to '/etc/ssl/certs/ca-certificates.crt' (in the container)
+      ENV_IRODS_SSL_CA_CERTIFICATE: test_only_dev_irods_dh_ca_cert.pem
+      ENV_S3_RESC_NAME_AC: "UM-Ceph-S3-AC"
+      ENV_S3_HOST_AC: "minio1.dh.local:9000"
+      ENV_S3_RESC_NAME_GL: "UM-Ceph-S3-GL"
+      ENV_S3_HOST_GL: "minio2.dh.local:9000"
+      ENV_FILEBEAT_PRIMARY_TAG: IRES
+      ENV_FILEBEAT_SECONDARY_TAG: IRES_UM01
+      VIRTUAL_HOST: ires-s3.${RIT_ENV}.rit.unimaas.nl
+    volumes:
+      # SSL files
+      - ./irods/ires-s3/test-dev-ssl-certs/:/opt/irods_ssl_staging:ro
+      # patch so we setup_irods.py doesn't re-create tables
+      - ./irods/patch/setup_irods_already_installed_dev.patch:/opt/irods/patch/setup_irods_already_installed_dev.patch
+      # ires-s3's bootstrap.sh (to be called by init.sh)
+      - ./externals/dh-irods/ires-s3/scripts/bootstrap.sh:/opt/irods/bootstrap.sh
+      # ires-s3's hooks for development
+      - ./irods/ires-s3/hooks/:/opt/irods/hooks/
+      # repos
+      - ./externals/irods-ruleset:/rules
+      - ./externals/irods-microservices:/microservices
+      - ./externals/irods-helper-cmd:/helpers
+      # irods-helper-cmd uses /etc/secrets
+      - ./irods.secrets.cfg:/etc/secrets:ro
+      # This is persistent because the delay queue depends on files in this directory
+      - delay-queue:/var/lib/irods/config/packedRei
+      - /etc/localtime:/etc/localtime:ro
+    profiles: ["backend-after-icat","full"]
+    networks:
+      default:
+        aliases:
+          - ires-s3.dh.local
+      common_default:
+        aliases:
+          - ires-s3.dh.local
+
+
 
   minio1:
     image: minio/minio:RELEASE.2023-01-12T02-06-16Z
