Move mdr-home and dh-home to full profile, so they do not get started by default[DHS-2969]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -382,6 +382,7 @@ services:
     volumes:
       - './externals/dh-home/src:/app/src'
       - './externals/dh-home/public:/app/public'
+    profiles: ["full"]
     networks:
       default:
         aliases:
@@ -403,6 +404,7 @@ services:
     volumes:
       - './externals/dh-mdr-home/src:/app/src'
       - './externals/dh-mdr-home/public:/app/public'
+    profiles: ["full"]
     networks:
       default:
         aliases:
