--- a/mdr.env
+++ b/mdr.env
@@ -1,12 +1,12 @@
 ENV=${RIT_ENV}
 
 # Proxy
-VIRTUAL_HOST=mdr.${RIT_ENV}.dh.unimaas.nl
+VIRTUAL_HOST=app.mdr.${RIT_ENV}.dh.unimaas.nl
 VIRTUAL_PORT=8000
 
 # SAML
 SAML_IDP_METADATA_URL=http://keycloak.${RIT_ENV}.dh.unimaas.nl:8080/auth/realms/django/protocol/saml/descriptor
-SAML_DJANGO_BASE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl
+SAML_DJANGO_BASE_URL=http://app.mdr.${RIT_ENV}.dh.unimaas.nl
 SAML_DJANGO_WANT_ASSERTIONS_SIGNED="True"                               # SURFconext: True, SRAM: False
 SAML_DJANGO_WANT_RESPONSE_SIGNED="False"                                # SURFconext: True, SRAM: True
 # Must use friendly names here (not the urn:oid values, as those are being translated by pysaml2 already)
@@ -73,5 +73,5 @@ DRAG_AND_DROP_MAX_FILES=100
 DRAG_AND_DROP_MAX_SIZE=50
 
 # Help-center backend
-HELP_CENTER_BACKEND_HOST=help-center-backend.dh.local
+HELP_CENTER_HOST=http://help.mdr.${RIT_ENV}.dh.unimaas.nl
 
