--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -352,6 +352,8 @@ services:
     build:
       context: externals/dh-help-center/frontend
       dockerfile: Dockerfile
+    env_file:
+      - irods.secrets.cfg
     image: ${ENV_REGISTRY_HOST}/docker-dev/help-center:${ENV_TAG}
     environment:
       VIRTUAL_HOST: helpcenter.${RIT_ENV}.dh.unimaas.nl
