--- a/docker-compose-irods.yml
+++ b/docker-compose-irods.yml
@@ -455,13 +455,18 @@ services:
           - ires-ceph-gl.dh.local
 
   minio1:
-    image: minio/minio:RELEASE.2023-01-12T02-06-16Z
+    image: minio/minio:RELEASE.2023-05-27T05-56-19Z
     environment:
       VIRTUAL_HOST: minio1.${RIT_ENV}.rit.unimaas.nl
       MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY_AC}
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY_AC}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && minio server /data'
+    volumes:
+      # SSL files
+      - ./irods/minio/minio1.dh.local.crt:/root/.minio/certs/public.crt
+      - ./irods/minio/minio1.dh.local.key:/root/.minio/certs/private.key
+      - ./irods/minio/test_only_dev_irods_dh_ca_cert.pem:/root/.minio/certs/CAs/test_only_dev_irods_dh_ca_cert.pem
     networks:
       default:
         aliases:
@@ -471,13 +476,18 @@ services:
           - minio1.dh.local
 
   minio2:
-    image: minio/minio:RELEASE.2023-01-12T02-06-16Z
+    image: minio/minio:RELEASE.2023-05-27T05-56-19Z
     environment:
       VIRTUAL_HOST: minio2.${RIT_ENV}.rit.unimaas.nl
       MINIO_ACCESS_KEY: ${ENV_S3_ACCESS_KEY_GL}
       MINIO_SECRET_KEY: ${ENV_S3_SECRET_KEY_GL}
     entrypoint: sh
     command: -c 'mkdir -p /data/dh-irods-bucket-dev && minio server /data'
+    volumes:
+      # SSL files
+      - ./irods/minio/minio2.dh.local.crt:/root/.minio/certs/public.crt
+      - ./irods/minio/minio2.dh.local.key:/root/.minio/certs/private.key
+      - ./irods/minio/test_only_dev_irods_dh_ca_cert.pem:/root/.minio/certs/CAs/test_only_dev_irods_dh_ca_cert.pem
     networks:
       default:
         aliases:
