Revert HDL change and specify new logout page[DHS-3140, DHS-3123]

--- a/.env
+++ b/.env
@@ -82,6 +82,6 @@ ENV_EPICPID_PASSWORD=test_lhkjdhfgqpow96312
 ENV_HC_BACKEND_URL=http://help-center-backend.dh.local:8000
 
 # MDR
-ENV_MDR_HANDLE_URL=http://app.mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
+ENV_MDR_HANDLE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
 
 ENV_DEBUG_DH_BOOTSTRAP="no"
