Add DataHub home url to mdr config [DHS-3152, DHS-2888]

--- a/mdr.env
+++ b/mdr.env
@@ -39,6 +39,8 @@ WEBDAV_DOWNLOAD_URL=download.${RIT_ENV}.dh.unimaas.nl
 WEBDAV_UPLOAD_URL=upload.${RIT_ENV}.dh.unimaas.nl
 JIRA_URL=https://mumc.atlassian.net
 JIRA_PROJECT_KEY=DHDOSB
+DATAHUB_HOME_URL : http://datahubhomepage.${RIT_ENV}.dh.unimaas.nl
+HELP_CENTER_BACKEND_HOST=help-center-backend.dh.local
 
 # SMB
 SMB_UM_WINDOWS_PATH=\\foobar.unimaas.nl\iRODS-ingestzones\dev
@@ -72,6 +74,4 @@ MDR_POSTGRES_PASSWORD=foobar
 DRAG_AND_DROP_MAX_FILES=100
 DRAG_AND_DROP_MAX_SIZE=50
 
-# Help-center backend
-HELP_CENTER_BACKEND_HOST=help-center-backend.dh.local
 
