--- a/.env
+++ b/.env
@@ -78,8 +78,7 @@ ENV_EPICPID_USER=user
 ENV_EPICPID_PASSWORD=test_lhkjdhfgqpow96312
 
 # Help center backend
-# On ACC/PRD the https://mdr.${RIT_ENV}.dh.unimaas.nl endpoint for this can be used
-ENV_HC_BACKEND_URL=http://help-center-backend.dh.local:8000
+ENV_HC_BACKEND_URL=http://help.mdr.${RIT_ENV}.dh.unimaas.nl
 
 # MDR
 ENV_MDR_HANDLE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl/hdl/
